[tool.poetry]
name = "hive"
version = "0.1.0"
description = ""
authors = ["Wade Jensen <hello@wade-jensen.com>"]

[tool.poetry.dependencies]
python = "^3.7"
networkx = "2.4"
flask = "1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
